# NSEngineAndroid

./: .gitignore  Dockerfile  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/codexspark/nsengine/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/assets/shaders/: basic.shader
app/src/main/cpp/cmake/: Configs.hpp.in
app/src/main/cpp/intern/: base.hpp  debug.hpp  exception.hpp  index_buffer.hpp  nsengine_app.hpp  renderer.hpp  shader.hpp  types.hpp  utils.hpp  vertex_buffer.hpp
app/src/main/cpp/src/: exception.cpp  index_buffer.cpp  nsengine_app.cpp  renderer.cpp  shader.cpp  vertex_buffer.cpp
app/src/main/cpp/tests/: CMakeLists.txt  nsengine_tests.cpp
app/src/main/java/com/codexspark/nsengine/: MainActivity.kt  NSEngineLib.kt  NSEngineView.kt
app/src/main/res/layout/: activity_main.xml  layout_test.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/codexspark/nsengine/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
